+ Default git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,31 @@
-# Maven
-target/
-build.log
-
-# IntelliJ IDEA
+# Idea Files #
 .idea/
 *.iml
+*.ipr
+atlassian-ide-plugin.xml
+
+# Maven Files #
+target/
+tree.txt
+
+# Hibernate Files #
+dbdata/
+hbmdlloutput.txt
+
+# Developer Files #
+JBTest.java
+
+# Git Files #
+*.patch
+
+# MacOS Files #
+.DS_Store
+*~
+
+# Eclipse Files #
+/.settings
+/.classpath
+/.project
+
+# Velocity Files #
+velocity.log
